--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@celery/ui-components",
-  "version": "1.1.3",
+  "version": "2.0.0-0",
   "description": "Shared UI Components and Styles",
   "main": "config.less",
   "scripts": {
