--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@celery/ui-components",
   "version": "2.0.0-5",
   "description": "Shared UI Components and Styles",
-  "main": "config.less",
+  "main": "components/index.less",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "broccoli build build",
