--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Shared UI Components and Styles",
   "main": "components/index.less",
   "scripts": {
-    "test": "rm -rf build && npm run build",
-    "build": "broccoli build build",
+    "test": "npm run build",
+    "build": "rm -rf build && broccoli build build",
     "build-watch": "broccoli-timepiece build",
     "styleguide": "styledown components/**/*.less styleguide/config.md > styleguide/index.html",
     "styleguide-watch": "watch 'npm run styleguide' components mixins styleguide --wait=1"
